added gallery section

--- a/index.html
+++ b/index.html
@@ -191,6 +191,38 @@
             </div>
 
           </section>
+
+          <!-- Gallary section  -->
+           <section class="gallery-section">
+            <h2 class="section-title">Gallery</h2>
+            <div class="section-contain">
+                <ul class="gallery-list">
+                    <li class="gallery-items">
+                        <img src="gallery-1.jpg" alt="gallery" class="gallery-image">
+                    </li>
+
+                    <li class="gallery-items">
+                        <img src="gallery-2.jpg" alt="gallery" class="gallery-image">
+                    </li>
+
+                    <li class="gallery-items">
+                        <img src="gallery-3.jpg" alt="gallery" class="gallery-image">
+                    </li>
+
+                    <li class="gallery-items">
+                        <img src="gallery-4.jpg" alt="gallery" class="gallery-image">
+                    </li>
+
+                    <li class="gallery-items">
+                        <img src="gallery-5.jpg" alt="gallery" class="gallery-image">
+                    </li>
+
+                    <li class="gallery-items">
+                        <img src="gallery-6.jpg" alt="gallery" class="gallery-image">
+                    </li>
+                </ul>
+            </div>
+           </section>
     </main>
 
     <!-- linking swiper script js -->
