--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
             <ul class="nav-menu">
                 <button id="menu-close-button" class="fas fa-times"></button>
                 <li class="nav-items">
-                    <a href="#" class="nav-links">Home</a>
+                    <a href="#home" class="nav-links">Home</a>
                 </li>
 
                  <li class="nav-items">
-                    <a href="" class="nav-links">About</a>
+                    <a href="#about" class="nav-links">About</a>
                 </li>
 
                 <li class="nav-items">
-                    <a href="" class="nav-links">Menu</a>
+                    <a href="#menu" class="nav-links">Menu</a>
                 </li>
 
                 <li class="nav-items">
-                    <a href="" class="nav-links">Testimonials</a>
+                    <a href="#testimonials" class="nav-links">Testimonials</a>
                 </li>
 
                 <li class="nav-items">
-                    <a href="" class="nav-links">Gallery</a>
+                    <a href="#gallery" class="nav-links">Gallery</a>
                 </li>
 
                 <li class="nav-items">
-                    <a href="" class="nav-links">Contact</a>
+                    <a href="#contact" class="nav-links">Contact</a>
                 </li>
                
 
@@ -51,7 +51,7 @@
 
     <main>
         <!-- hero section  -->
-        <section class="hero-section">
+        <section class="hero-section" id="home">
             <div class="section-contain">
                 <div class="hero-details">
                     <h2 class="title">Best Coffee</h2>
@@ -69,7 +69,7 @@
         </section>
 
         <!-- About section  -->
-         <section class="about-section">
+         <section class="about-section" id="about">
             <div class="section-contain">
                 <div class="about-image-wapper">
                     <img src="about-image.jpg" alt="about section image" class="about-image">
@@ -99,7 +99,7 @@
          </section>
 
          <!-- menu section -->
-          <section class="menu-selection">
+          <section class="menu-selection" id="menu">
             <h2 class="section-title">Our menu</h2>
 
             <div class="section-contain">
@@ -145,7 +145,7 @@
           </section>
 
           <!-- Testimonials section -->
-          <section class="testimonials-section">
+          <section class="testimonials-section" id="testimonials">
             <h2 class="section-title">Testimonials</h2>
             <div class="section-contain">
                 <div class="slider-conteiner swiper">
@@ -193,7 +193,7 @@
           </section>
 
           <!-- Gallary section  -->
-           <section class="gallery-section">
+           <section class="gallery-section" id="gallery">
             <h2 class="section-title">Gallery</h2>
             <div class="section-contain">
                 <ul class="gallery-list">
@@ -223,6 +223,81 @@
                 </ul>
             </div>
            </section>
+
+           <!-- contact section -->
+            <section class="contact-section" id="contact">
+                <h2 class="section-title">Contact Us</h2>
+                <div class="section-contain">
+                    <ul class="contsct-info-list">
+                        <li class="contact-info">
+                        <i class="fa-solid fa-location-crosshairs"></i>
+                        <p>123 campsite Avenue, Wilderness, CA 98765</p>
+                        </li>
+
+                        <li class="contact-info">
+                        <i class="fa-regular fa-envelope"></i>
+                        <p>info@coffeeWebsite.com</p>
+                        </li>
+
+                        <li class="contact-info">
+                        <i class="fa-solid fa-phone"></i>
+                        <p>(123) 456-78909</p>
+                        </li>
+
+                        <li class="contact-info">
+                        <i class="fa-regular fa-clock"></i>
+                        <p>Monday - Friday: 9:00AM - 5:00PM</p>
+                        </li>
+
+                         <li class="contact-info">
+                        <i class="fa-regular fa-clock"></i>
+                        <p>Saturday: 10:00 AM - 3:00 PM</p>
+                        </li>
+
+                        <li class="contact-info">
+                        <i class="fa-regular fa-clock"></i>
+                        <p>Sunday: closed</p>
+                        </li>
+
+                        <li class="contact-info">
+                        <i class="fa-solid fa-globe"></i>
+                        <p>www.coffeeStand.com</p>
+                        </li>
+                    </ul>
+
+                    <form action="#" class="contact-form">
+                        <input type="text" placeholder="Your name" class="form-input" required>
+                         <input type="text" placeholder="Your email" class="form-input" required>
+                         <textarea name="" id="" placeholder="Your message " class="form-input" required></textarea>
+                        <button class="submit-button">Submit</button>
+                        </form>
+                </div>
+            </section>
+
+            <!-- footer section -->
+             <footer class="footer-section">
+                <div class="section-contain">
+                    <p class="copyRight-text">@ 2024 coffee shop</p>
+
+                     <div class="social-link-list">
+                        <a href="" class="social-link"><i class="fa-brands fa-facebook"></i>
+                        </a>
+
+                        <a href="" class="social-link"><i class="fa-brands fa-instagram"></i>
+                        </a>
+
+                        <a href="https://github.com/shahprem12345124-eng
+" class="social-link"><i class="fa-brands fa-github"></i>
+                        </a>
+                    </div>
+                    <p class="policy-text">
+                        <a href="#" class="pilicy-link">Privacy policy</a>
+                        <span class="seperator"></span>
+                         <a href="#" class="pilicy-link">Refund policy</a>
+                    </p>
+                </div>
+                
+             </footer>
     </main>
 
     <!-- linking swiper script js -->
